Closed Bug 857589 Opened 12 years ago Closed 12 years ago

Windows plugin dir service provider shouldn't warn on missing plugin registry key

Categories

(Core Graveyard :: Plug-ins, defect)

All
Windows 7
defect
Not set
minor

Tracking

(Not tracked)

RESOLVED FIXED
mozilla23

People

(Reporter: gfritzsche, Assigned: gfritzsche)

Details

Attachments

(1 file)

nsPluginDirServiceProvider triggers a warning if it can't access the reg-key "Software\MozillaPlugins" here: http://hg.mozilla.org/mozilla-central/annotate/3a5929ebc886/dom/plugins/base/nsPluginDirServiceProvider.cpp#l378 AFAIK this reg-key not existing is perfectly fine and we don't need to spam e.g. try logs with it (at least WinXP try slaves don't have any reg keys for plugins set).
Attachment #732836 - Flags: review?(benjamin)
Assignee: nobody → georg.fritzsche
Attachment #732836 - Flags: review?(benjamin) → review+
Status: NEW → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla23
(In reply to Georg Fritzsche [:gfritzsche] from comment #1) > https://hg.mozilla.org/integration/mozilla-inbound/rev/e59593a4baa1 How can QA verify this fix?
It's just a cosmetic change of a warning not being shown in logs, so i don't think this needs verification.
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: