Bug 857589 - Bail out without warnings when no plugins registry key is present. r=bsmedberg